kubernetes/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  selfLink: "/apis/extensions/v1beta1/namespaces/jenkins/ingresses/jenkins"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:881000864846:certificate/8d76dccf-ccf1-4c2a-b4b1-09056b4db85a
    alb.ingress.kubernetes.io/healthcheck-path: "/login"
    alb.ingress.kubernetes.io/inbound-cidrs: 185.63.117.0/29,216.251.118.195/32,173.209.95.237/32,173.209.86.150/32,185.63.119.111/32,176.126.62.59/32,216.251.118.195/32,176.126.62.189/32,140.82.112.0/20,143.55.64.0/20,192.30.252.0/22,2a0a:a440::/29,2606:50c0::/32,185.199.108.0/22
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-3.10.2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - jenkins-k8s.us-west-2.test.ewecgp.expedia.com
